--- a/loggliest/build.gradle
+++ b/loggliest/build.gradle
@@ -7,11 +7,11 @@ ext {
 }
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '22'
+    compileSdkVersion 23
+    buildToolsVersion '22.0.1'
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 2
         versionName PUBLISH_VERSION
     }
@@ -19,6 +19,7 @@ android {
 
 dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
 }
 
 apply plugin: 'maven'
